[gd_scene load_steps=13 format=3 uid="uid://cphi0cg2safub"]

[ext_resource type="Script" uid="uid://1kiapugm7kgr" path="res://scripts/util/debug_commands.gd" id="1_b4stf"]
[ext_resource type="Script" uid="uid://s36af8eoblro" path="res://scripts/puzzle_controller_3d.gd" id="1_yob6b"]
[ext_resource type="Script" uid="uid://dra4lijujrmwu" path="res://scripts/puzzle_viewport.gd" id="2_f1g4q"]
[ext_resource type="Script" uid="uid://dih8wwvotb5tk" path="res://scripts/puzzle_drawer.gd" id="3_b4stf"]
[ext_resource type="Script" uid="uid://dcnqwn1puo4h" path="res://scripts/resources/grid_mesh_3d.gd" id="3_ygxcr"]
[ext_resource type="Script" uid="uid://cdsemgxjyhjng" path="res://scripts/cursor.gd" id="4_ygxcr"]
[ext_resource type="Script" uid="uid://brmgweuwi3o8i" path="res://scripts/simulation/flesh_sim_3d.gd" id="7_xrhyx"]
[ext_resource type="Script" uid="uid://bk1vxm6ujfddn" path="res://scripts/resources/body_mesh_3d.gd" id="8_gl5h8"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_f1g4q"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_b4stf"]
sky_material = SubResource("ProceduralSkyMaterial_f1g4q")

[sub_resource type="Environment" id="Environment_ygxcr"]
background_mode = 2
sky = SubResource("Sky_b4stf")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_xrhyx"]
albedo_color = Color(0.811694, 0.561665, 0.386574, 1)

[node name="Game3d" type="Node3D"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_ygxcr")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="DebugCommands" type="Node" parent="."]
script = ExtResource("1_b4stf")

[node name="PuzzleController" type="Node3D" parent="." node_paths=PackedStringArray("camera")]
script = ExtResource("1_yob6b")
camera = NodePath("../Camera3D")

[node name="BodyMesh3D" type="MeshInstance3D" parent="PuzzleController"]
skeleton = NodePath("../..")
script = ExtResource("8_gl5h8")
metadata/_custom_type_script = ExtResource("8_gl5h8")

[node name="GridMesh3D" type="MeshInstance3D" parent="PuzzleController"]
gi_mode = 0
script = ExtResource("3_ygxcr")
metadata/_custom_type_script = ExtResource("3_ygxcr")

[node name="PuzzleViewport" type="SubViewport" parent="PuzzleController"]
disable_3d = true
handle_input_locally = false
size = Vector2i(100, 100)
script = ExtResource("2_f1g4q")

[node name="PuzzleDrawer" type="Control" parent="PuzzleController/PuzzleViewport"]
top_level = true
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_b4stf")

[node name="Cursor" type="Control" parent="PuzzleController/PuzzleViewport"]
top_level = true
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("4_ygxcr")
hint_color = Color(0.529066, 0.529067, 0.529067, 1)

[node name="PuzzleUIContainer" type="Control" parent="PuzzleController/PuzzleViewport"]
layout_mode = 3
anchors_preset = 0
offset_right = 128.0
offset_bottom = 96.0

[node name="FleshSim3D" type="Node3D" parent="PuzzleController"]
script = ExtResource("7_xrhyx")
hide_fixed = false
draw_offsets = true

[node name="CSGBox3D" type="CSGBox3D" parent="PuzzleController"]
transform = Transform3D(1, 0, 0, 0, 0.999995, 0, 0, 0, 0.999995, 0.58714, -2.01603, 0.498107)
material = SubResource("StandardMaterial3D_xrhyx")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.581271, 0.81371, 0, -0.81371, 0.581271, 0, 3.19418, 2.45204)
